# Trading-Analysis

./: .env.example  .gitattributes  .gitignore  Binance API test-Copy1.ipynb  Binance API test.ipynb  Binance bot.ipynb  CLAUDE.md  Indicator Definitions.txt  Main.ipynb  Main_Simulation-Copy1.ipynb  Main_Simulation-Copy2.ipynb  Main_Simulation-Copy3.ipynb  Main_Simulation-MACD_V1.ipynb  Main_Simulation-ema-cut-through-spread (Optimizer).ipynb  Main_Simulation-ema-only (Optimizer)_V1.ipynb  Main_Simulation-ema-only (Optimizer)_V2.ipynb  Main_Simulation-ema-only_V1.ipynb  Main_Simulation-ema-only_V2.ipynb  Main_Simulation-super-trend_V1 (Optimizer).ipynb  Main_Simulation-super-trend_V1 (TP SL Optimizer).ipynb  Main_Simulation.ipynb  README.md  analytics.py  bin.py  config.py  data-Copy1.py  data-Copy2.py  data.py  ema_diagnostic_plots.py  indicators_load.py  mtf_plot-Copy1.py  mtf_plot.py  pipeline.py  plot_simulation.py  plot_toggles.py  plotter.py  precomputed_factory-Copy1.py  precomputed_factory.py  pyproject.toml  requirements.txt  (+1 more)
docs/: ARCHITECTURE.md  EXPERIMENT_GUIDE.md  INDICATOR_GUIDE.md  SESSION_NOTES.md
examples/: gold_ema_demo.py
experiments/: README.md  __init__.py  base.py  ema_mtf.py  exit_design.py  session_timing.py
features/: cross_through.py  ema_compression.py  ema_diagnostics.py  ema_spreads.py  stochastic_signals.py
indicators/: __init__.py  bollinger_bands.py  macd.py  market_structure.py  momentum.py  moving_average.py  precomputed-Copy1.py  precomputed-Copy2.py  precomputed.py  rsi_divergence.py  stochastic.py  supertrend.py  volume_ma.py  (+4 more)
(+84 files in other folders)
