[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant"
version = "0.1.0"
description = "Quantitative research & backtesting platform (vectorized signals + numba engine)"
readme = "CLAUDE.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=16",
    "polars>=1.0",
    "numba>=0.60",
    "plotly>=6.0",
    "tqdm>=4.66",
    "joblib>=1.4",
    "scipy>=1.13",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
optimize = ["optuna>=3.6"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
quant = "quant.cli:main"

[tool.setuptools.packages.find]
include = ["quant*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
